--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,11 @@ yarn-debug.log*
 .vscode
 .claude/settings.local.json
 .cursor
+
+# Vite Ruby
+/public/vite*
+node_modules
+# Vite uses dotenv and suggests to ignore local-only env files. See
+# https://vitejs.dev/guide/env-and-mode.html#env-files
+*.local
+
